# Vision-Zephyr

./: .gitignore  README.md  environment.yaml  file.txt  pyproject.toml
.devcontainer/: Dockerfile
Checkpoints/vis-zephyr-7b-v1-pretrain/: trainer_state.json
Checkpoints/vis-zephyr-7b-v1-pretrain/checkpoint-1/: config.json
checkpoints/vis-zephyr-7b-v1-finetune-lora/: adapter_config.json  config.json
checkpoints/vis-zephyr-7b-v1-pretrain/: config.json
checkpoints/vis-zephyr-7b-v1-pretrain-tune-vcr/: config.json
playground/data/Pretrain/: blip_meta.json
playground/data/pretrain/: blip.json  test.json  test_100.json
playground/data/tuning/: test.json
script/: finetune.sh  mmbench.sh  pretrain.sh  pretrain.vcr.sh  run_cli.sh  vit.vcr.sh
script/eval/: eval_mmbench.sh  eval_qa.sh
vis_zephyr/: conservation.py  constants.py  conversation.py  test.py  utils.py
vis_zephyr/eval/: eval_mmbench.py  eval_vqa.py
vis_zephyr/model/: __init__.py  builder.py  mm_utils.py  multi_scale_process.py  utils.py  vis_zephyr_arch.py
vis_zephyr/model/gating_fusion/: __init__.py  gating_fusion.py  mean_gating_fusion.py
vis_zephyr/model/language_model/: __init__.py  vis_zephyr.py  vis_zephyr_mistral.py
vis_zephyr/model/multimodal_projector/: __init__.py  builder.py
vis_zephyr/model/vip_processor/: configuration.py  conservation_generator.py  conversation_generator.py  processor.py  shape_draw.py  utils.py
vis_zephyr/model/vision_encoder/: __init__.py  builder.py  vision_encoder.py
vis_zephyr/serve/: api.py  cli.py
vis_zephyr/train/: train.py  train_mem.py  vis_zephyr_trainer.py  zephyr_flash_attn_monkey_patch.py
