[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vis-zephyr"
version = "0.1.0"
description = "A Large Vision-Language Model based on Zephyr-7B and CLIP, optimized for high-performance training and inference."
authors = [
    { name = "Name", email = "author@example.com" },
]
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["llm", "vlm", "multimodal", "zephyr", "mistral", "clip", "vision-language"]

[tool.setuptools.packages.find]
where   = ["."]